--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
     "@react-three/fiber": "^8.0.19",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.36",
+    "@types/jest": "^28.1.0",
+    "@types/node": "^16.11.38",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "@types/three": "^0.140.0",
+    "@types/three": "^0.141.0",
     "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "three": "^0.140.2",
+    "three": "^0.141.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -60,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/user-event": "^14.2.0"
   }
 }
